plugins {
    id 'war'
    id 'checkstyle'
}

repositories {
    mavenCentral()
    mavenLocal()
}

apply from: '../opencadc.gradle'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

group = 'org.opencadc'

war {
    from(System.getenv('RPS') + '/resources/') {
        include 'swagger-ui/'
    }
    from('.') {
        include 'VERSION'
    }
}

dependencies {
    // Used to query the underlying database.
    implementation 'org.springframework:spring-context:7.0.5'
    implementation 'org.springframework:spring-jdbc:7.0.5'

    implementation 'org.opencadc:cadc-log:[1.2.1,2.0)'
    implementation 'org.opencadc:cadc-registry:[1.7.3,)'
    implementation 'org.opencadc:cadc-rest:[1.3.14,)'

    implementation 'org.opencadc:cadc-util:[1.12.14,2.0)'
    constraints {
        'org.springframework:spring-jdbc:7.0.5'
    }

    implementation 'org.opencadc:cadc-vosi:[1.4.8,2.0)'
    implementation 'org.opencadc:cadc-gms:[1.0.5,2.0)'

    testImplementation 'junit:junit:[4.0,)'

    intTestImplementation 'org.opencadc:cadc-test-vosi:[1.0.11,)'
    intTestImplementation 'org.apache.commons:commons-lang3:3.13.0'

    runtimeOnly 'org.opencadc:cadc-gms:[1.0.12,2.0)'
    runtimeOnly 'org.opencadc:cadc-access-control-identity:[1.0.3,2.0)'
    runtimeOnly 'org.postgresql:postgresql:[42.6.0,)'

    // work around because 1.8.0-beta4 prints exceptions in log, eg:
    // java.lang.NoSuchFieldException: mdc
    //    at java.base/java.lang.Class.getDeclaredField(Class.java:2411)
    //    at org.apache.log4j.MDCFriend.fixForJava9(MDCFriend.java:13)
    runtimeOnly 'org.slf4j:slf4j-api:1.7.36'
    runtimeOnly 'org.slf4j:jcl-over-slf4j:1.7.36'
    runtimeOnly 'org.slf4j:slf4j-log4j12:1.7.36'
}

